<resources>
    <string name="app_name">Anode Jacking Frame Operation Checklist</string>
    <string name="form">Anode Jacking Operation Form</string>
    <string name="book">Anode Jacking Related Documents</string>

    <string name="question_name">Name</string>
    <string name="question_section">Section</string>
    <string name="question_AB">AB</string>
    <string name="question_CD">CD</string>
    <string name="question_potNo">Pot No.</string>
    <string name="question_startTime">Starting Time</string>
    <string name="question_endTime">Ending Time</string>
    <string name="question_remarks">Remarks</string>
    <string name="send_to">Your message will be sent to Mr. Wil Allen</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="donot">I do not want to sign up</string>
    <string name="congrats">You have successfully registered into the database. This registration allows you to receive notification from your team members through the app</string>

    <string name="about">What is this about?</string>

    <string name="about2">By register through this app, your phone is now connected to our server. This allow us to use your token/phone ID to send the notification or message to your phone.</string>


    <string name="action_settings">Settings</string>
    <string name="abc_an_amazing_alphabet_book">ABC: An Amazing Alphabet Book!</string>

    <string name="are_you_my_mother">Are You My Mother?</string>
    <string name="where_is_babys_belly_button">Where is Baby\'s Belly Button</string>
    <string name="on_the_night_you_were_born">On The Night You Were Born</string>
    <string name="hand_hand_fingers_thumb">Hand Hand Fingers Thumb</string>
    <string name="the_very_hungry_caterpillar">The Very Hungry Caterpillar</string>
    <string name="the_going_to_bed_book">The Going To-Bed Book</string>
    <string name="oh_baby_go_baby">Oh Baby Go Baby</string>
    <string name="the_tooth_book">The Tooth Book</string>
    <string name="one_fish_two_fish_red_fish_blue_fish">One Fish, Two Fish, Red Fish, Blue Fish</string>

    <string name="dr_seuss">Dr. Seuss</string>
    <string name="karen_katz">Karen Katz</string>
    <string name="nancy_tillman">Nancy Tillman</string>
    <string name="eric_carle">Eric Carle</string>
    <string name="sandra_boynton">Sandra Boynton</string>



</resources>
