<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:accessibilityPaneTitle="@string/form"
    android:layout_height="match_parent"
    tools:context=".record.Record">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/question_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_name"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="ⓘ Example: AB2"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/question_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_section"
                android:inputType="textAutoComplete" />

        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/question_potNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_potNo"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/question_startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_startTime"
                android:timePickerMode="spinner"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ⓘ Double tap to open clock"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"/>

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/question_endTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_endTime"
                android:timePickerMode="spinner"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="ⓘ Optional"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/question_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_remarks"
                android:inputType="textAutoComplete" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/questions_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_gravity="bottom|end"

            android:src="@drawable/ic_send_black_100dp" >

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </LinearLayout>

</ScrollView>